<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="version_name">1.5.5</string>
    <string name="channel_name">VISAFE đang bảo vệ bạn</string>
    <string name="channel_description">Thông báo này xuất hiện khi VISAFE đang hoạt động.</string>
    <string name="notification_title">VISAFE đang hoạt động</string>
    <string name="notification_content">Nhấn để trở lại VISAFE</string>
    <string name="warning_channel_name">Cảnh báo</string>
    <string name="warning_channel_description">Hiển thị khi VISAFE gặp sự cố.</string>
    <string name="warning_title">Cảnh báo: VISAFE đã bị vô hiệu hóa</string>
    <string name="notification_channel_id">default</string>
    <string name="server_choice_key" translatable="false">pref_server_url</string>
    <string name="server_choice">Cấu hình hệ thống</string>
    <string name="server_choice_summary">Hiện tại là %s</string>
    <string name="excluded_apps" description="Title of the 'Excluded apps' setting, which allows the user to select apps that will not use Intra.">
    Excluded apps
  </string>
    <string name="status_protected">Bạn đã được bảo vệ</string>
    <string name="explanation_protected">Kết nối của bạn đã được bảo vệ khỏi các cuộc tấn công DNS.</string>
    <string name="status_exposed">Bấm để bật tính năng bảo vệ</string>
    <string name="explanation_exposed">Kết nối của bạn không được bảo vệ khỏi các cuộc tấn công DNS.</string>
    <string name="excluded_apps_summary" description="Summary of how the Excluded apps' setting works">
    DNS queries from any selected apps will not go through Intra.  If an app appears to be
    incompatible with Intra, you can add it here.
  </string>
    <string name="excluded_apps_title">Đánh dấu các ứng dụng không dùng VISAFE</string>
    <string name="status_starting">Đang khởi động…</string>
    <string name="explanation_starting">Vui lòng chờ. VISAFE đang thiết lập kết nối đến máy chủ.</string>
    <string name="status_waiting">Đang kết nối</string>
    <string name="status_failing">Hệ thống DNS đang bảo trì</string>
    <string name="explanation_offline">Thiết bị hiện không có kết nối mạng. VISAFE đang chờ kết nối mạng.</string>
    <string name="explanation_vpn" description="Warning text shown on the main screen before the user starts Intra">
    Intra has detected another VPN on your device.  If you enable Intra, that VPN will be disabled.
    Intra is not as secure as a trusted VPN.
  </string>
    <string name="explanation_failing">
    Warning: Queries are failing.  You may want to choose a different server or restart Intra.
  </string>
    <string name="system_details" description="This is the title of a section containing information on the system configuration and
  status.">
    System details
  </string>
    <string name="num_requests" description="This text appears under the number of queries protected so far.">
    Lifetime queries
  </string>
    <string name="num_requests_headline">
    DNS queries happen when your device looks up the IP address for a domain name
  </string>
    <string name="num_requests_body">
    This value shows the total number of DNS queries that your device has performed while Intra was
    active.  Intra encrypts these queries and sends them to a trusted server to make sure you\'re
    getting authentic results.
  </string>
    <string name="intro_accept" description="Button label to acknowledge legal terms and VPN access permission request">
    accept
  </string>
    <string name="status_upgraded">Bấm để bật tính năng bảo vệ</string>
    <string name="explanation_upgraded" description="Corresponds to status_upgraded.">
    Your connection is currently protected by Android Private DNS, but an attacker could disable
    or undermine this protection.
  </string>
    <string name="status_strict">Bạn đã được bảo vệ</string>
    <string name="explanation_strict">VISAFE đã phát hiện thấy tùy chọn cài đặt DNS riêng tư của Android đang bật. Điều này có nghĩa là truy vấn
    DNS của bạn đã được bảo vệ nên không nhất thiết phải bật VISAFE.</string>
    <string name="app_name">Visafe</string>
    <string name="facebook_app_id">300828164912304</string>
    <string name="fb_login_protocol_scheme">fb300828164912304</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="workspaces">Workspace</string>
    <string name="support_title">Hỗ trợ</string>
    <string name="introduction_title">Hướng dẫn sử dụng</string>
    <string name="add_workspace">Thêm Workspace</string>
    <string name="drawer_open" description="Hint for visually impaired users to access the menu.">
    Open navigation drawer
  </string>
    <string name="drawer_close" description="Hint for visually impaired users to leave the menu.">
    Close navigation drawer
  </string>
    <string name="ncsc_workspace">NCSC Workspace</string>
    <string name="mask_character">\u2022</string>
    <string name="tai_khoan">Cài đặt</string>
    <string name="thong_bao">Thông báo</string>
    <string name="nhom">Nhóm</string>
    <string name="quan_tri">Quản trị</string>
    <string name="thanh_vien">Thành viên</string>
    <string name="protect">Trang chủ</string>
    <string name="setting">Cài đặt</string>
    <string name="general_setting">Cài đặt chung</string>
    <string name="DNSsetting">Cấu hình bảo vệ</string>
    <string name="utilities">Tiện ích</string>
    <string name="no_register">Chưa đăng ký</string>
    <string name="register_device">Tham gia nhóm</string>
    <string name="update_pin">Quản lý mã bảo vệ</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="infomation_product">Thông tin sản phẩm</string>
    <string name="create_group">Tạo nhóm mới</string>
    <string name="thiet_lap_bao_mat">Thiết lập bảo mật</string>
    <string name="thong_ke_chung">Thống kê chung</string>
    <string name="in_day">Trong ngày</string>
    <string name="truy_cap_bao_ve">Lượt truy cập \nđược bảo vệ</string>
    <string name="quang_cao_da_chan">Quảng cáo đã chặn</string>
    <string name="ma_doc_da_chan">Mã độc, lừa đảo \nđã chặn</string>
    <string name="noi_dung_da_chan">Nội dung đã chặn</string>
    <string name="content_most_title">Nội dung dùng nhiều</string>
    <string name="app_most_title">Ứng dụng dùng nhiều</string>
    <string name="devices_most_title">Thiết bị dùng nhiều</string>
    <string name="group_list_title">Danh sách nhóm</string>
    <string name="create_group_title">Tạo nhóm</string>
    <string name="group_is_owner">Nhóm bạn quản lý</string>
    <string name="group_is_member">Nhóm bạn đã tham gia</string>
    <string name="your_device_join_group">Thiết bị của bạn đã tham gia nhóm</string>
    <string name="phat_trien_boi">Phát triển bởi</string>
    <string name="your_device_protected">Thiết bị của bạn đã được bảo vệ</string>
    <string name="bam_de_bat">để bật tính năng bảo vệ</string>
    <string name="access_manager">Quản lý truy cập</string>
    <string name="block_application">Ngăn chặn sử dụng các ứng dụng</string>
    <string name="application">Ứng dụng</string>
    <string name="block_websites">Ngăn chặn truy cập website</string>
    <string name="websites">Websites</string>
    <string name="limit_search_content_sub">Ngăn chặn các nội dung không phù hợp, nhạy cảm, bình luận,… trên các trang tìm kiếm</string>
    <string name="limit_search_content">Chặn nội dung người lớn</string>
    <string name="block_by_pass">Chống ByPass</string>
    <string name="block_by_pass_sub">Ngăn chặn VPN, Proxy,…</string>
    <string name="save">Lưu</string>
    <string name="block_websites_group">Chặn website không cho nhóm sử dụng</string>
    <string name="pri_websites_group">Ưu tiên website cho nhóm sử dụng</string>
    <string name="block_sensitive">Chặn nội dung cờ bạc</string>
    <string name="sub_block_sensitive">Ngăn chặn các nội dung liên quan đến cờ bạc, cá độ</string>
    <string name="input_website">Nhập link website muốn chặn</string>
    <string name="input_website_prioritized">Nhập link website ưu tiên sử dụng</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="reset">Đặt lại mặc định</string>
    <string name="edit_websites">Chỉnh sửa đường dẫn website</string>
    <string name="delete_websites">Xóa đường dẫn website</string>
    <string name="block_tracking">Chặn theo dõi &amp; quảng cáo</string>
    <string name="next">Tiếp tục</string>
    <string name="protected_group">Bạn muốn tên hiển thị của nhóm là gì?</string>
    <string name="input_group">Nhập tên của nhóm</string>
    <string name="child">Trẻ em</string>
    <string name="adult">Người lớn</string>
    <string name="elder">Người cao tuổi</string>
    <string name="add_new_link">Thêm link website</string>
    <string name="protect_group_content"><![CDATA[Bằng cách tiếp tục, bạn đã đồng ý với <font color=\'#15A1FA\'>Điều khoản & Chính sách</font> dành cho khách hàng của Visafe]]></string>
    <string name="edit_workspace">Chỉnh sửa workspace</string>
    <string name="edit_group">Chỉnh sửa nhóm</string>
    <string name="edit_info_group">Chỉnh sửa thông tin nhóm</string>
    <string name="edit_device">Sửa tên thiết bị</string>
    <string name="delete_workspace">Xóa workspace</string>
    <string name="delete_group">Xóa nhóm</string>
    <string name="delete_device">Xóa thiết bị khỏi nhóm</string>
    <string name="delete_workspace_content">Bạn có chắc chắn muốn xóa workspace %s</string>
    <string name="delete_group_content">Bạn có chắc chắn muốn xóa %s</string>
    <string name="update_name_workspace">Chỉnh sửa tên</string>
    <string name="delete_device_content">Bạn có chắc chắn muốn xóa thiết bị %s (%s) khỏi nhóm</string>
    <string name="no">Không</string>
    <string name="input_workspace">Nhập tên workspace</string>
    <string name="family">Gia đình</string>
    <string name="school">Trường học</string>
    <string name="company">Doanh nghiệp</string>
    <string name="chinh_phu">Tổ chức chính phủ</string>
    <string name="thiet_lap_an_toan">Thiết lập an toàn, an ninh mạng</string>
    <string name="create_workspace_success">Tạo workspace thành công!</string>
    <string name="visafe_protect">Visafe đã sẵn sàng bảo vệ bạn.</string>
    <string name="create_success_button">Đã hiểu</string>
    <string name="create_workspace_title">Tạo workspace mới</string>
    <string name="all_day">Cả ngày</string>
    <string name="change_time">Thay đổi khung giờ truy cập</string>
    <string name="block_from">Chặn từ</string>
    <string name="block_to">đến</string>
    <string name="delete">Xóa</string>
    <string name="protection_all_day">Bảo vệ cả ngày</string>
    <string name="add_time">Thêm khung giờ</string>
    <string name="require_pick_time">Yêu cầu chọn thời gian chặn</string>
    <string name="time_protection">Khung giờ quản lý truy cập</string>
    <string name="repeat_daily">Lặp lại hàng ngày</string>
    <string name="nhap_ten_loai_tai_khoan">Nhập tên Workspace</string>
    <string name="create_account_type">Bạn muốn tên hiển thị của Workspace là gì?</string>
    <string name="create">Tạo</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="current_pass">Mật khẩu hiện tại</string>
    <string name="input_pass_for_account">Hãy nhập mật khẩu cho tài khoản %s</string>
    <string name="input_current_pass">Nhập mật khẩu hiện tại</string>
</resources>