<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_24dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_websites_group"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/websites"
            android:textColor="@color/color_111111"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="Tên phòng" />


        <EditText
            android:id="@+id/editLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@drawable/bg_edittext"
            android:ellipsize="end"
            android:hint="@string/input_website"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:singleLine="true"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGroup" />


        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:background="@drawable/bg_radius_24dp"
            android:backgroundTint="@color/color_FFB31F"
            android:gravity="center"
            android:padding="@dimen/_14dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLink" />


        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_radius_24dp"
            android:backgroundTint="#1A111111"
            android:gravity="center"
            android:padding="@dimen/_14dp"
            android:text="@string/cancel"
            android:textColor="@color/color_111111"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirm" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>