<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:gravity="center"
            android:fontFamily="@font/sf_pro_text_regular_bold"
            android:text="@string/protected_group"
            android:textColor="@color/color_111111"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editNameGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@drawable/bg_edittext"
            android:ellipsize="end"
            android:fontFamily="@font/sf_pro_text_regular"
            android:hint="@string/input_group"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_16dp"
            android:paddingVertical="@dimen/_12dp"
            android:singleLine="true"
            android:textColor="@color/color_111111"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxChild"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@null"
            android:button="@drawable/checkbox_selector"
            android:paddingHorizontal="10dp"
            android:text="@string/child"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editNameGroup" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxAdult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@null"
            android:button="@drawable/checkbox_selector"
            android:paddingHorizontal="10dp"
            android:text="@string/adult"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="@dimen/text_size_14sp"
            android:visibility="visible"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNameGroup" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxElder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="@dimen/_16dp"
            android:button="@drawable/checkbox_selector"
            android:paddingHorizontal="10dp"
            android:text="@string/elder"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="@dimen/text_size_14sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxChild" />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/color_FFB31F"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/next"
            android:fontFamily="@font/sf_pro_text_regular_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContent" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/protect_group_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxElder" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>