<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="24dp">

        <ImageView
            android:visibility="gone"
            android:id="@+id/ivWorkspace"
            android:layout_width="@dimen/_72dp"
            android:layout_height="@dimen/_72dp"
            android:layout_marginTop="@dimen/_32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:textColor="@color/color_222222"
            android:fontFamily="@font/sf_pro_text_regular_bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="@dimen/text_size_20sp"
            android:text="@string/create_account_type"
            android:id="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/editNameWorkspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@drawable/bg_edittext"
            android:ellipsize="end"
            android:fontFamily="@font/sf_pro_text_regular"
            android:hint="@string/nhap_ten_loai_tai_khoan"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_16dp"
            android:paddingVertical="@dimen/_12dp"
            android:singleLine="true"
            android:textColor="@color/color_111111"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:ignore="Autofill" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <CheckedTextView
            android:visibility="gone"
            android:id="@+id/checkBoxFamily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:drawableStart="@drawable/checkbox_circle"
            android:gravity="center_vertical"
            android:text="@string/family"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editNameWorkspace"
            tools:ignore="RtlSymmetry" />

        <CheckedTextView
            android:visibility="gone"
            android:id="@+id/checkBoxSchool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:drawableStart="@drawable/checkbox_circle"
            android:gravity="center_vertical"
            android:text="@string/school"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNameWorkspace"
            tools:ignore="RtlSymmetry" />

        <CheckedTextView
            android:visibility="gone"
            android:id="@+id/checkBoxCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:drawableStart="@drawable/checkbox_circle"
            android:gravity="center_vertical"
            android:text="@string/company"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="@id/checkBoxChinhPhu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@id/checkBoxChinhPhu"
            tools:ignore="RtlSymmetry" />

        <CheckedTextView
            android:visibility="gone"
            android:id="@+id/checkBoxChinhPhu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:drawableStart="@drawable/checkbox_circle"
            android:gravity="center_vertical"
            android:text="@string/chinh_phu"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFamily"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@drawable/bg_radius_34dp"
            android:backgroundTint="@color/color_FFB31F"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/create"
            android:fontFamily="@font/sf_pro_text_regular_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCompany" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:gravity="center"
            android:text="@string/protect_group_content"
            android:textSize="@dimen/text_size_12sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNext" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>